# fedlib

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: unit-tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/keyconcepts/: keyconcepts.rst
docs/source/modules/: aggregators.rst
examples/: fedavg_tune.py  splitnn_example.py
fedlib/: constants.py  session.py  train.py
fedlib/_internal/: worker_group.py
fedlib/aggregators/: __init__.py  aggregators.py  centeredclipping.py  clippedclustering.py  multikrum.py  signguard.py
fedlib/aggregators/tests/: test_aggregators.py  test_clippedclustering.py
fedlib/algorithms/: __init__.py  algorithm.py  algorithm_config.py  callbacks.py  registry.py  server.py  server_config.py
fedlib/algorithms/fedavg/: fedavg.py
fedlib/algorithms/fedavg/tests/: test_fedavg.py
fedlib/algorithms/tests/: test_callbacks.py
fedlib/clients/: __init__.py  callbacks.py  client.py  client_config.py
fedlib/config_examples/: fedavg_cifar10_resnet10.yaml  fedsgd_cifar10.yaml
fedlib/config_examples/fedprox/: fedprox_cifar10.yaml
fedlib/core/: __init__.py
fedlib/core/execution/: session.py  worker.py  worker_group.py  worker_group_config.py
fedlib/core/tests/: test_actor_namager.py  test_worker.py  test_worker_group.py
fedlib/datasets/: __init__.py  catalog.py  clientdataset.py  dataset.py  noniid_visualization.ipynb  toy_dataset.py  ucihar.py
fedlib/datasets/partitioners/: __init__.py  dataset_partitioner.py  dirichlet_partitioner.py  iid_partitioner.py  shard_partitioner.py
fedlib/datasets/partitioners/tests/: test_iid_partitioner.py  test_iid_splitter.py  test_partitioner.py  test_splitters.py
fedlib/datasets/splitters/: dataset_splitter.py
fedlib/datasets/splitters/tests/: test_iid_splitter.py  test_splitters.py
fedlib/datasets/tests/: test_clientdataset.py  test_dataset_.py  toy_dataset.py
fedlib/models/: catalog.py
fedlib/models/cifar10/: cct.py
fedlib/models/tests/: test_models.py
fedlib/tasks/: __init__.py  classifier.py  general_classification.py  task.py
fedlib/trainers/: __init__.py  callbacks.py  client_manager.py  registry.py  server.py  server_config.py  trainer.py  trainer_config.py
fedlib/trainers/fedavg/: __init__.py  fedavg.py
fedlib/trainers/fedavg/tests/: test_fedavg.py
fedlib/trainers/fedprox/: __init__.py  fedprox.py
fedlib/trainers/fedprox/tests/: test_fedprox.py
fedlib/trainers/tests/: test_callbacks.py
fedlib/utils/: __init__.py  torch_utils.py
